--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,13 +9,14 @@
     }
   ],
   "dependencies": {
-	"com.unity.nuget.newtonsoft-json": "2.0.0",
+    "com.unity.adaptiveperformance.samsung.android": "4.0.0",
     "com.unity.collab-proxy": "1.15.15",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.feature.mobile": "1.0.0",
     "com.unity.ide.rider": "3.0.14",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.nuget.newtonsoft-json": "2.0.0",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
